# apache-airflow-backport-providers-google-2021.3.3

./: CHANGELOG.txt  MANIFEST.in  README.rst  setup.cfg  setup.py
airflow/providers/google/ads/hooks/: ads.py
airflow/providers/google/cloud/example_dags/: example_automl_nl_text_classification.py  example_automl_nl_text_extraction.py  example_automl_nl_text_sentiment.py  example_automl_tables.py  example_automl_translation.py  example_automl_video_intelligence_classification.py  example_automl_video_intelligence_tracking.py  example_automl_vision_classification.py  example_automl_vision_object_detection.py  example_bigquery_dts.py  example_bigquery_operations.py  example_bigquery_queries.py  example_bigquery_sensors.py  example_bigquery_to_bigquery.py  example_bigquery_to_gcs.py  example_bigquery_transfer.py  example_bigtable.py  example_cloud_build.py  example_cloud_memorystore.py  example_cloud_sql.py  example_cloud_sql_query.py  example_cloud_storage_transfer_service_aws.py  example_cloud_storage_transfer_service_gcp.py  example_compute.py  example_compute_igm.py  example_compute_ssh.py  example_datacatalog.py  example_dataflow.py  example_dataflow_sql.py  example_datafusion.py  example_datastore.py  example_dlp.py  example_functions.py  example_gcs.py  example_gcs_to_bigquery.py  example_gcs_to_gcs.py  example_gcs_to_local.py  example_gcs_to_sftp.py  example_gdrive_to_gcs.py  example_gdrive_to_local.py  (+21 more)
airflow/providers/google/cloud/hooks/: bigquery.py  cloud_sql.py  (+2 more)
apache_airflow_backport_providers_google.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+22 files in other folders)
