[metadata]
name = Airflow Backport provider: apache-airflow-backport-providers-google
summary = Backport provider for Apache Airflow. Implements apache-airflow-backport-providers-google package
description-file = README.md
author = Apache Airflow PMC
author-email = dev@airflow.apache.org
license = Apache License, Version 2.0
license_files = 
	LICENSE
	NOTICE

[bdist_wheel]
python-tag = py3

[files]
packages = airflow.providers.google

[egg_info]
tag_build = 
tag_date = 0

